# scaling-lamp

./: .env.example  .gitignore  AGENTS.md  COMPARISON.md  Cargo.toml  README.md  SYSTEM.md  config.example.toml  go.mod  go.sum  manifest
.beads/: metadata.json
cmd/agentd/: Cargo.toml  build.rs
cmd/agentd/src/: a2a.rs  about.rs  agents.rs  bootstrap.rs  cli.rs  daemon.rs  delivery_worker.rs  diagnostics.rs  event_bus.rs  event_errors.rs  event_runtime.rs  event_runtime_runner.rs  execution.rs  help.rs  lib.rs  main.rs  mcp.rs  nats.rs  otel.rs  prompting.rs  redaction.rs  router_worker.rs  session_worker.rs  store_retry.rs  task_worker.rs  telegram.rs  trace.rs  tui.rs
cmd/agentd/src/bootstrap/: agent_ops.rs  context_ops.rs  delivery_ops.rs  disk_ops.rs  execution_ops.rs  mcp_ops.rs  memory_ops.rs  session_ops.rs  tool_ops.rs
cmd/agentd/src/cli/: migrate.rs  parse.rs  process.rs  render.rs  repl.rs  tests.rs
cmd/agentd/src/execution/: autonomy.rs  background.rs  chat.rs  delegate_jobs.rs  delegation.rs  interagent.rs  knowledge_context.rs  kv.rs  mcp.rs  mem0.rs  memory.rs  memory_curator.rs  memory_recall.rs  mission.rs  provider_completion.rs  provider_cursor.rs  provider_ids.rs  provider_ledger.rs  provider_loop.rs  provider_offload.rs  provider_prompt.rs  provider_text.rs  provider_tool_dispatch.rs  provider_tool_errors.rs  scopes.rs  skill_install.rs  supervisor.rs  tools.rs  wakeup.rs
cmd/agentd/src/http/: client.rs  server.rs  types.rs
cmd/agentd/src/http/client/: chat.rs  internal.rs  mcp.rs  sessions.rs  status.rs
cmd/agentd/src/http/server/: a2a.rs  agents.rs  chat.rs  delivery.rs  disk.rs  mcp.rs  memory.rs  sessions.rs  status.rs  telegram.rs  tools.rs  web.rs
cmd/agentd/src/telegram/: backend.rs  bindings.rs  client.rs  commands.rs  delivery.rs  event_delivery.rs  files.rs  polling.rs  progress.rs  queue.rs  render.rs  router.rs  webhook.rs
cmd/agentd/src/tui/: app.rs  backend.rs  browser.rs  browser_items.rs  command_parse.rs  debug_bundle.rs  events.rs  render.rs  timeline.rs  worker.rs
cmd/agentd/src/tui/screens/: chat.rs  inspector.rs  mod.rs  session.rs
cmd/agentd/tests/: README.md  autonomous_smoke.rs  bootstrap_app.rs  chat_smoke.rs  daemon_cli.rs  daemon_http.rs  daemon_http_a2a.rs  daemon_tui.rs  delivery_event_worker.rs  event_error_policy.rs  event_runtime_smoke.rs  event_runtime_startup.rs  nats_event_bus.rs  router_worker.rs  session_context.rs  session_event_worker.rs  skills_tui.rs  telegram_surface.rs  telegram_webhook.rs  timing_policy.rs  tool_call_smoke.rs  tui_app.rs
cmd/agentd/tests/bootstrap_app/: agents.rs  background.rs  chat.rs  context.rs  core.rs  delivery.rs  interagent.rs  mcp.rs  repl.rs  schedules.rs  support.rs
cmd/agentd/tests/daemon_http/: support.rs
crates/agent-persistence/: Cargo.toml
crates/agent-persistence/src/: audit.rs  config.rs  lib.rs  records.rs  recovery.rs  repository.rs  store.rs
crates/agent-persistence/src/config/: tests.rs
crates/agent-persistence/src/records/: tests.rs
crates/agent-persistence/src/store/: agent_repos.rs  context_repos.rs  delivery_repos.rs  event_repos.rs  execution_repos.rs  file_delivery_repos.rs  inbox_repos.rs  kv_repos.rs  mcp_repos.rs  memory_repos.rs  payloads.rs  router_repos.rs  schema.rs  session_mission.rs  task_registry_repos.rs  telegram_repos.rs  tests.rs  tool_call_repos.rs  trace_repos.rs
crates/agent-persistence/src/store/tests/: delivery.rs  event_bus.rs  telegram.rs  tool_calls.rs  trace.rs
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: agent.rs  archive.rs  context.rs  delegation.rs  inbox.rs  interagent.rs  lib.rs  mcp.rs  memory.rs  mission.rs  permission.rs  plan.rs  prompt.rs  provider.rs  run.rs  scheduler.rs  session.rs  skills.rs  tool.rs  verification.rs  workspace.rs
crates/agent-runtime/src/scheduler/: tests.rs
crates/agent-runtime/src/skills/: activation.rs  catalog.rs  parser.rs
crates/agent-runtime/src/tool/: browser.rs  catalog.rs  inputs.rs  names.rs  outputs.rs  parse.rs  parse_repair.rs  runtime.rs  schema.rs  tests.rs  web.rs
crates/agent-runtime/tests/: provider_contract.rs  skills_activation.rs  skills_catalog.rs  skills_prompt.rs
docs/: clean-room-builder-composition.md  clean-room-cli-chat.md  clean-room-config-graph.md  clean-room-contract-resolver.md  clean-room-current-policies-and-strategies.md  clean-room-current-runtime-flow.md  clean-room-current-system-detailed.md  clean-room-daemon-web-ui.md  clean-room-delegation-contract.md  clean-room-filesystem-shell-tools.md  clean-room-implemented-strategies.md  clean-room-persistent-event-log.md  clean-room-persistent-projections.md  clean-room-plan-tools.md  clean-room-policy-strategy-registries.md  clean-room-prompt-assets.md  clean-room-provider-client.md  clean-room-request-shape-executor.md  clean-room-runtime-skeleton.md  clean-room-transport-executor.md  clean-room-tui.md  clean-room-zai-smoke.md  mesh-runtime.md
memory/: 2026-04-09.md  2026-04-10.md  2026-04-11.md  2026-04-12.md  2026-04-13.md  2026-04-14.md  handoff.md
scripts/: collect-teamd-diagnostics.sh  deploy-teamd-binary.sh  deploy-teamd-containers.sh  deploy-teamd.sh  (+3 more)
(+904 files in other folders)
