[workspace]
members = ["cmd/*", "crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/galiakhmetovc/scaling-lamp"
rust-version = "1.95"
version = "0.1.0"

[workspace.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tempfile = "3"
toml = "0.8"
