[workspace]
members = ["cmd/*", "crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/galiakhmetovc/scaling-lamp"
rust-version = "1.95"
version = "1.0.3"

[workspace.dependencies]
crossterm = "0.28"
encoding_rs = "0.8"
pulldown-cmark = "0.13"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
time = { version = "0.3", features = ["formatting", "macros"] }
tiny_http = "0.12"
toml = "0.8"
unicode-width = "0.2"
