[package]
name = "agentd"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
agent-persistence = { path = "../../crates/agent-persistence" }
agent-runtime = { path = "../../crates/agent-runtime" }
crossterm.workspace = true
encoding_rs.workspace = true
ratatui.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tiny_http.workspace = true

[dev-dependencies]
reqwest.workspace = true
tempfile.workspace = true
