[package]
name = "agentd"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
agent-persistence = { path = "../../crates/agent-persistence" }
agent-runtime = { path = "../../crates/agent-runtime" }
crossterm.workspace = true
encoding_rs.workspace = true
libc = "0.2"
pulldown-cmark.workspace = true
ratatui = { workspace = true, features = ["unstable-rendered-line-info"] }
reqwest.workspace = true
rmcp = { version = "0.16", features = ["client", "transport-child-process"] }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
tiny_http.workspace = true
tokio = { version = "1", features = ["process", "rt", "time"] }
unicode-width.workspace = true

[dev-dependencies]
reqwest.workspace = true
tempfile.workspace = true
