[package]
name = "agent-persistence"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rusqlite.workspace = true
serde.workspace = true
sha2.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
